INTLY-339 fix URLs for keycloak crds

--- a/evals/roles/rhsso/defaults/main.yml
+++ b/evals/roles/rhsso/defaults/main.yml
@@ -27,8 +27,8 @@ rhsso_operator_commit_tag: master
 
 rhsso_operator_required_objects:
   - rbac.yaml
-  - Keycloak_crd.yaml
-  - KeycloakRealm_crd.yaml
+  - crds/Keycloak_crd.yaml
+  - crds/KeycloakRealm_crd.yaml
 
 rhsso_seed_users_email_format: evals%02d@example.com
 rhsso_seed_users_name_format: evals%02d@example.com
