--- a/evals/roles/msbroker/defaults/main.yml
+++ b/evals/roles/msbroker/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 msbroker_namespace: managed-service-broker
-msbroker_image_org: quay.io/integreatly
+msbroker_image_org: quay.io/tremes
 msbroker_image_tag: master
 msbroker_git_ref: master
 msbroker_template_url: "https://raw.githubusercontent.com/integr8ly/managed-service-broker/{{ msbroker_git_ref }}/templates/broker.template.yaml"
