--- a/inventories/group_vars/all/manifest.yaml
+++ b/inventories/group_vars/all/manifest.yaml
@@ -96,7 +96,7 @@ middleware_monitoring_operator_release_tag: '0.0.5'
 middleware_monitoring_operator_resources: 'https://raw.githubusercontent.com/integr8ly/application-monitoring-operator/{{ middleware_monitoring_operator_release_tag }}/deploy'
 
 msbroker_release_tag: 'v0.0.4'
-msbroker_template: 'https://raw.githubusercontent.com/integr8ly/managed-service-broker/{{ msbroker_release_tag }}/templates/broker.template.yaml'
+msbroker_template: 'https://raw.githubusercontent.com/JameelB/managed-service-broker/INTLY-1854/templates/broker.template.yaml'
 
 # information about backups
 backup_version: '1.0.1'
