--- a/inventories/group_vars/all/manifest.yaml
+++ b/inventories/group_vars/all/manifest.yaml
@@ -16,10 +16,10 @@ threescale_template_s3: '{{threescale_resources_base}}/amp-s3.yml'
 #controls whether che is installed or not
 #note che cannot be installed without launcher being present currently
 che: true
-che_version: '1.0.0.GA'
+che_version: '1.2.0.GA'
 # by default the GA installer uses the :latest tag so we need to set the tagged version in the config
-che_server_image: 'registry.access.redhat.com/codeready-workspaces/server:1.0'
-che_operator_image: 'registry.access.redhat.com/codeready-workspaces/server-operator:1.0'
+che_server_image: 'registry.redhat.io/codeready-workspaces/server-rhel8:1.2'
+che_operator_image: 'registry.redhat.io/codeready-workspaces/server-operator-rhel8:1.2'
 che_installer: 'https://raw.githubusercontent.com/redhat-developer/codeready-workspaces-deprecated/{{che_version}}/operator-installer/deploy.sh'
 
 #controls whether enmasse is installed or not
