--- a/roles/3scale/tasks/install.yml
+++ b/roles/3scale/tasks/install.yml
@@ -74,7 +74,7 @@
       shell: >
         oc process -n {{ threescale_namespace }} -f {{ threescale_template_s3 }} -p WILDCARD_DOMAIN={{ threescale_route_suffix }} {{ wildcard_policy_param }} -p FILE_UPLOAD_STORAGE={{ threescale_file_upload_storage }} -p AWS_BUCKET={{ threescale_storage_s3_aws_bucket }} -p AWS_REGION={{ threescale_storage_s3_aws_region }} -p AWS_ACCESS_KEY_ID={{ threescale_storage_s3_aws_access_key }} -p AWS_SECRET_ACCESS_KEY={{ threescale_storage_s3_aws_secret_key }}  | oc create -n {{ threescale_namespace }} -f -
       when: threescale_file_upload_storage == "s3"
-  when: threescale_resources_exist.stderr == "No resources found."
+  #when: threescale_resources_exist.stderr == "No resources found."
 
 - import_tasks: resources.yml
 
@@ -102,7 +102,7 @@
 
     - name: "Create system-storage PVC with storageClassName: {{ threescale_pvc_rwx_storageclassname }}"
       shell: oc create -f /tmp/system-storage-pvc.yml -n {{ threescale_namespace }}
-      when: threescale_resources_exist.stderr == "No resources found." and storageclass_exists.rc == 0
+      when: storageclass_exists.rc == 0
   when: threescale_file_upload_storage == "filesystem"
 
 - name: "Verify 3Scale deployment succeeded"
