--- a/roles/msbroker/tasks/main.yml
+++ b/roles/msbroker/tasks/main.yml
@@ -17,7 +17,7 @@
 
 
 - name: Get 3scale dashboard url
-  shell: oc get route/system-provider-admin -o jsonpath='{.spec.host}' -n {{ threescale_namespace }}
+  shell: oc get routes -n {{ threescale_namespace }} | grep system-provider | awk '{print $2}'
   register: threescale_host_cmd
   when: threescale
 - set_fact:
