--- a/roles/msbroker/tasks/main.yml
+++ b/roles/msbroker/tasks/main.yml
@@ -53,7 +53,7 @@
     is_service: true
 
 - include_role:
-    name: fuse_pull_secret
+    name: imagestream_pull_secret
   vars:
     namespace: "{{ msbroker_namespace }}"
   when: fuse_online
