--- a/inventories/group_vars/all/common.yml
+++ b/inventories/group_vars/all/common.yml
@@ -23,7 +23,7 @@ eval_user_rhsso_namespace:  "{{ns_prefix | default('')}}user-sso"
 eval_seed_users_count: 50
 eval_webapp_url_prefix: tutorial-web-app-{{ eval_webapp_namespace }}
 
-eval_threescale_enable_wildcard_route: false
+eval_threescale_enable_wildcard_route: true
 # To use S3 storage instead of filesystem (PVC-based requiring ReadWriteMany)
 #eval_threescale_file_upload_storage: s3
 #eval_threescale_storage_s3_aws_access_key: <aws_access_key>
