Update release script to reset upgrade variables file.

--- a/playbooks/upgrade.yml
+++ b/playbooks/upgrade.yml
@@ -5,13 +5,13 @@
   tasks:
   - name: Set Upgrade Facts
     set_fact: upgrade_{{ item }}=true
-    with_items: "{{ upgrade_products }}"
+    with_items: "{{ upgrade_product_roles }}"
 
   - name: Upgrade products
     include_role:
       name: "{{ item }}"
       tasks_from: "{{ upgrade_tasks_from }}"
-    with_items: "{{ upgrade_products }}"
+    with_items: "{{ upgrade_product_roles }}"
 
   - name: Some Special webapp only upgrade thing
     include_role:
