--- a/inventories/group_vars/all/manifest.yaml
+++ b/inventories/group_vars/all/manifest.yaml
@@ -1,5 +1,5 @@
 ---
-integreatly_version: release-9.6.1-rc2
+integreatly_version: release-9.6.1
 
 # Possible values are: rhpds, poc, osd, dev
 cluster_type: rhpds
