--- a/roles/fuse_managed/tasks/upgrade_images.yml
+++ b/roles/fuse_managed/tasks/upgrade_images.yml
@@ -1,4 +1,16 @@
 ---
-#ToDo Implement CVE image update steps as described https://github.com/RHCloudServices/integreatly-help/blob/master/sops/cves/applying-cve-updates.md
-- debug:
-    msg: "TODO Implement me!!"
+- name: Add new tag to Fuse online images
+  shell: "oc tag --source docker {{ obj_item.image }} {{ obj_item.imageStreamName }}:{{ obj_item.tag }} -n {{ obj_item.namespace }}"
+  with_items: "{{ fuse_upgrade_images }}"
+  loop_control:
+    loop_var: obj_item 
+
+- name: Import new Fuse online images
+  shell: "oc import-image {{ obj_item.imageStreamName }}:{{ obj_item.tag }} --confirm='true' {{ obj_item.image }} -n {{ obj_item.namespace }}"
+  with_items: "{{ fuse_upgrade_images }}"
+  loop_control:
+    loop_var: obj_item 
+  register: import_image_result
+  until: import_image_result.rc == 0
+  retries: 5
+  delay: 5
