--- a/roles/fuse_managed/defaults/main.yml
+++ b/roles/fuse_managed/defaults/main.yml
@@ -7,49 +7,40 @@ fuse_pull_secret_name: "syndesis-pull-secret"
 
 fuse_resources: []
 
-fuse_upgrade_images:
+fuse_image_streams:
   - name: "fuse-ignite-server"
     image: "registry.redhat.io/fuse7/fuse-ignite-server:1.4-17"
     tag: "1.7"
     namespace: "openshift"
-    imageStreamName: "fuse-ignite-server"
   - name: "fuse-ignite-ui"
     image: "registry.redhat.io/fuse7/fuse-ignite-ui:1.4-9"
     tag: "1.7"
     namespace: "openshift"
-    imageStreamName: "fuse-ignite-ui"
   - name: "fuse-ignite-meta"
     image: "registry.redhat.io/fuse7/fuse-ignite-meta:1.4-16"
     tag: "1.7"
     namespace: "openshift"
-    imageStreamName: "fuse-ignite-meta"
   - name: "fuse-ignite-s2i"
     image: "registry.redhat.io/fuse7/fuse-ignite-s2i:1.4-16"
     tag: "1.7"
     namespace: "openshift"
-    imageStreamName: "fuse-ignite-s2i"
-  - name: "fuse-postgres-exporter"
+  - name: "postgres-exporter"
     image: "registry.redhat.io/fuse7-tech-preview/fuse-postgres-exporter:1.4-4"
     tag: "v0.4.7"
     namespace: "openshift"
-    imageStreamName: "postgres-exporter"
-  - name: "ose-oauth-proxy"
+  - name: "oauth-proxy"
     image: "registry.redhat.io/openshift4/ose-oauth-proxy:4.1"
     tag: "v1.1.0"
     namespace: "openshift"
-    imageStreamName: "oauth-proxy"
   - name: "prometheus"
     image: "registry.access.redhat.com/openshift3/prometheus:v3.9.25"
     tag: "v2.1.0"
     namespace: "openshift"
-    imageStreamName: "prometheus"
-  - name: "jboss-amq-6"
+  - name: "jboss-amq-63"
     image: "registry.access.redhat.com/jboss-amq-6/amq63-openshift:1.3"
     tag: "1.3"
     namespace: "{{ fuse_namespace }}"
-    imageStreamName: "jboss-amq-63"  
   - name: "fuse-online-operator"
     image: "registry.redhat.io/fuse7/fuse-online-operator:1.4-16"
     tag: "1.7"
     namespace: "{{ fuse_namespace }}"
-    imageStreamName: "fuse-online-operator"
