--- a/playbooks/install.yml
+++ b/playbooks/install.yml
@@ -3,6 +3,7 @@
 - import_playbook: "./openshift.yml"
 - import_playbook: "./user.yaml"
 - import_playbook: "./install_middleware_monitoring.yml"
+- import_playbook: "./install_heimdall.yml"
 - import_playbook: "./install_amq_streams.yml"
 - import_playbook: "./install_sso.yml"
 - import_playbook: "./install_infra.yml"
