Add heimdall operator to installation (Currently not installed by default) Add heimdall imagemonitor cr creation to all supported products https://github.com/integr8ly/installation/blob/master/playbooks/group_vars/all/cve.yml#L2 Add heimdall installation to upgrade script

--- a/playbooks/uninstall.yml
+++ b/playbooks/uninstall.yml
@@ -143,6 +143,13 @@
       vars:
         sso_namespace: "{{ eval_user_rhsso_namespace | default('user-sso') }}"
       tags: ['rhsso-user']
+    -
+      name: Uninstall heimdall
+      include_role:
+        name: heimdall
+        tasks_from: uninstall
+      tags: ['heimdall']
+      when: heimdall | default(true) | bool
 
     -
       name: Reboot template broker
