--- a/roles/code-ready/defaults/main.yml
+++ b/roles/code-ready/defaults/main.yml
@@ -38,3 +38,8 @@ che_keycloak_port: 443
 codeready_backup_postgres_secret: 'codeready-postgres-secret'
 codeready_postgres_cronjob_name: 'codeready-postgres-backup'
 codeready_pv_cronjob_name: 'codeready-pv-backup'
+
+#scaling
+codeready_resources: []
+
+codeready_heimdall_exclude_pattern: ""
