--- a/roles/rhsso/defaults/main.yml
+++ b/roles/rhsso/defaults/main.yml
@@ -58,4 +58,22 @@ rhsso_backups:
 rhsso_threescale_route_creator_role: '3scale-route-creator'
 rhsso_threescale_route_creator_role_filepath: '/tmp/3scale-route-creator.yml'
 
-upgrade_sso_operator_image: "quay.io/integreatly/keycloak-operator:{{rhsso_operator_release_tag}}"
+rhsso_operator_image: "quay.io/integreatly/keycloak-operator:{{rhsso_operator_release_tag}}"
+
+rhsso_resources:
+  - name: sso
+    kind: dc
+    resources:
+      requests:
+        memory: 500Mi
+  - name: sso-postgresql
+    kind: dc
+    resources:
+      requests:
+        memory: 25Mi
+
+rhsso_image_streams:
+  - "{{ rhsso_imagestream_name }}"
+  - postgresql:9.5
+
+rhsso_heimdall_exclude_pattern: ""
