--- a/roles/heimdall/defaults/main.yml
+++ b/roles/heimdall/defaults/main.yml
@@ -8,3 +8,7 @@ heimdall_operator_resource_items:
   - "{{ heimdall_operator_resources }}/cluster_role_binding.yaml"
   - "{{ heimdall_operator_resources }}/crds/imagemonitor_v1alpha1_imagemonitor_crd.yaml"
   - "{{ heimdall_operator_resources }}/operator.yaml"
+
+heimdall_deployments:
+  - name: "heimdall"
+    image: "quay.io/integreatly/heimdall-operator:master"
