INTLY-3672 - Grafana Dashboard and monitoring alert for image freshness labels

--- a/roles/middleware_monitoring_config/defaults/main.yml
+++ b/roles/middleware_monitoring_config/defaults/main.yml
@@ -21,6 +21,7 @@ monitoring_grafanadashboards_resource_templates:
 - resources-by-namespace.yml
 - resources-by-pod.yml
 - cluster-resources.yml
+- images_cves.yml
 
 # PrometheusRules template variables
 monitoring_prometheusrules_resource_templates:
