--- a/roles/middleware_monitoring_config/tasks/create_grafanadashboards.yml
+++ b/roles/middleware_monitoring_config/tasks/create_grafanadashboards.yml
@@ -1,3 +1,8 @@
 ---
 - include: ./create_from_template.yml
   with_items: "{{ monitoring_grafanadashboards_resource_templates }}"
+
+- name: Add Heimdall Grafana Dashboards
+  include: ./create_from_template.yml
+  with_items: "{{ heimdall_grafanadashboards_template }}"
+  when: heimdall
