Add todo to fuse_heimdall_exclude_pattern

--- a/roles/fuse_managed/defaults/main.yml
+++ b/roles/fuse_managed/defaults/main.yml
@@ -45,4 +45,4 @@ fuse_image_streams:
     tag: "1.7"
     namespace: "{{ fuse_namespace }}"
 
-fuse_heimdall_exclude_pattern: ""
+fuse_heimdall_exclude_pattern: "todo"
